@@ -40,15 +40,12 @@ public class OAuth10aService extends OAuthService {
      *
      * @return request token
      */
-    public OAuth1RequestToken getRequestToken() {
+    public final OAuth1RequestToken getRequestToken() {
         final OAuthConfig config = getConfig();
         config.log("obtaining request token from " + api.getRequestTokenEndpoint());
         final OAuthRequest request = new OAuthRequest(api.getRequestTokenVerb(), api.getRequestTokenEndpoint(), this);
 
-        config.log("setting oauth_callback to " + config.getCallback());
-        request.addOAuthParameter(OAuthConstants.CALLBACK, config.getCallback());
-        addOAuthParams(request, "");
-        appendSignature(request);
+        prepareRequestTokenRequest(request);
 
         config.log("sending request...");
         final Response response = request.send();
@@ -57,6 +54,29 @@ public class OAuth10aService extends OAuthService {
         config.log("response status code: " + response.getCode());
         config.log("response body: " + body);
         return api.getRequestTokenExtractor().extract(body);
+    }
+
+    public final Future<OAuth1RequestToken> getRequestTokenAsync(
+            OAuthAsyncRequestCallback<OAuth1RequestToken> callback) {
+        final OAuthConfig config = getConfig();
+        config.log("async obtaining request token from " + api.getRequestTokenEndpoint());
+        final OAuthRequestAsync request
+                = new OAuthRequestAsync(api.getRequestTokenVerb(), api.getRequestTokenEndpoint(), this);
+        prepareRequestTokenRequest(request);
+        return request.sendAsync(callback, new OAuthRequestAsync.ResponseConverter<OAuth1RequestToken>() {
+            @Override
+            public OAuth1RequestToken convert(Response response) throws IOException {
+                return getApi().getRequestTokenExtractor().extract(response.getBody());
+            }
+        });
+    }
+
+    protected void prepareRequestTokenRequest(AbstractRequest request) {
+        final OAuthConfig config = getConfig();
+        config.log("setting oauth_callback to " + config.getCallback());
+        request.addOAuthParameter(OAuthConstants.CALLBACK, config.getCallback());
+        addOAuthParams(request, "");
+        appendSignature(request);
     }
 
     private void addOAuthParams(AbstractRequest request, String tokenSecret) {
